turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:5: error: not found: value levecrayon
  levecrayon();
  ^CircleYing:9: error: not found: value baissecrayon
  baissecrayon();
  ^