turtleart.circleying.CircleYing.scala.code
override def run()
{
  val rayon = 50;
  
  levecrayon();
  droite(90);
	avance(rayon);
  
  baissecrayon();
  cercle(rayon);
  leveCrayon();
  
  avance(rayon/2);
  
}